sumo/tests/duarouter/trips/errors/vehicle_empty_arrivallane/errors.duarouter
Error: Attribute 'arrivalLane' in definition of a trip is empty.
Error: Invalid arrivalLane definition for vehicle '';
 must be one of ("current", or an int>=0)
Quitting (on error).
